Fix: come visit vertical gaps

--- a/Coffee_backery_Code/css/style.css
+++ b/Coffee_backery_Code/css/style.css
@@ -233,12 +233,12 @@ header nav>ul>*{
 
 .about-us-section{
   min-height: 680px;
-  padding: 40px 0;
+  padding: 70px 0 40px 0;
 }
 
 .about-us{
   gap: 25px;
-  padding: 95px 0;
+  padding: 30px 0 95px 0;
   height: fit-content;
 
 }
@@ -270,7 +270,7 @@ header nav>ul>*{
 }
 
 .come-visit-details ul>*{
-  padding: 4% 0;
+  padding: 5% 0;
 }
 
 .come-visit-details div{
